Using ServiceLoader to find factories. Moved JFX demo to JFX module to avoid hangs on Swing+macOS demos